--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1169</width>
-    <height>700</height>
+    <height>714</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -21,17 +21,46 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="5">
-     <widget class="QLCDNumber" name="lcd_fps"/>
-    </item>
-    <item row="0" column="0">
-     <widget class="QPushButton" name="btn_init">
-      <property name="text">
-       <string>Initialisation</string>
+    <item row="1" column="7">
+     <widget class="QSlider" name="slider_ts">
+      <property name="minimum">
+       <number>1</number>
+      </property>
+      <property name="maximum">
+       <number>100</number>
+      </property>
+      <property name="pageStep">
+       <number>5</number>
+      </property>
+      <property name="sliderPosition">
+       <number>80</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
-    <item row="0" column="4">
+    <item row="0" column="10">
+     <widget class="QLCDNumber" name="lcd_fps"/>
+    </item>
+    <item row="1" column="6">
+     <widget class="QCheckBox" name="checkBox_coord">
+      <property name="text">
+       <string>Coordonnées</string>
+      </property>
+      <property name="tristate">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="4">
+     <widget class="QCheckBox" name="checkBox_inversion">
+      <property name="text">
+       <string>Inversion</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="9">
      <widget class="QLabel" name="lbl_fps">
       <property name="layoutDirection">
        <enum>Qt::LeftToRight</enum>
@@ -44,7 +73,33 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
+    <item row="2" column="2" colspan="9">
+     <widget class="QLabel" name="lbl_img">
+      <property name="minimumSize">
+       <size>
+        <width>700</width>
+        <height>700</height>
+       </size>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::NoFrame</enum>
+      </property>
+      <property name="lineWidth">
+       <number>3</number>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QPushButton" name="btn_init">
+      <property name="text">
+       <string>Initialisation</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
      <widget class="QPushButton" name="btn_single">
       <property name="enabled">
        <bool>false</bool>
@@ -54,23 +109,42 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="2">
-     <widget class="QPushButton" name="btn_video">
+    <item row="1" column="0">
+     <widget class="QPushButton" name="btn_disconnect">
       <property name="enabled">
        <bool>false</bool>
       </property>
       <property name="text">
-       <string>Video</string>
+       <string>Disconnect</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="3">
+    <item row="0" column="8">
      <widget class="QPushButton" name="btn_stop">
       <property name="enabled">
        <bool>false</bool>
       </property>
       <property name="text">
        <string>Stop</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="8">
+     <widget class="QSlider" name="slider_ratio">
+      <property name="minimum">
+       <number>0</number>
+      </property>
+      <property name="maximum">
+       <number>10</number>
+      </property>
+      <property name="pageStep">
+       <number>1</number>
+      </property>
+      <property name="value">
+       <number>3</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
@@ -139,65 +213,27 @@
       </widget>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QPushButton" name="btn_disconnect">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="text">
-       <string>Disconnect</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1" colspan="5">
-     <widget class="QLabel" name="lbl_img">
-      <property name="minimumSize">
-       <size>
-        <width>700</width>
-        <height>700</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QCheckBox" name="checkBox_traitement">
-      <property name="text">
-       <string>Traitement</string>
-      </property>
-     </widget>
-    </item>
     <item row="1" column="2">
-     <widget class="QSlider" name="slider_ts">
-      <property name="maximum">
-       <number>100</number>
-      </property>
-      <property name="pageStep">
-       <number>5</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+     <widget class="QCheckBox" name="checkBox_contours">
+      <property name="text">
+       <string>Contours</string>
       </property>
      </widget>
     </item>
     <item row="1" column="3">
-     <widget class="QSlider" name="slider_ratio">
-      <property name="minimum">
-       <number>0</number>
+     <widget class="QCheckBox" name="checkBox_seuillage">
+      <property name="text">
+       <string>Seuillage</string>
       </property>
-      <property name="maximum">
-       <number>10</number>
+     </widget>
+    </item>
+    <item row="0" column="3">
+     <widget class="QPushButton" name="btn_video">
+      <property name="enabled">
+       <bool>false</bool>
       </property>
-      <property name="pageStep">
-       <number>1</number>
-      </property>
-      <property name="value">
-       <number>3</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+      <property name="text">
+       <string>Video</string>
       </property>
      </widget>
     </item>
